--- a/dynamicstore.html
+++ b/dynamicstore.html
@@ -36,7 +36,9 @@
         </div>
         <button class='purchase-btn' type='button'>PURCHASE</button>
     </section>
-
+    <section id="pagination">
+        
+    </section>
         <button class="cart-btn-bottom"> <a href="#cart" class="cart-bottom">See the cart</a></button>
 
     <!-- Toggle notification -->
